--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: anatole
 archive_generator:
   per_page: 0
   yearly: false
