--- a/_config.yml
+++ b/_config.yml
@@ -76,3 +76,10 @@ deploy:
   type: git
   repo: git@github.com:tom76kimo/blog.git
   branch: gh-pages
+
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content:
