Update description of site

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 湯姆餡's Blog
 subtitle: 程式 信仰 人生
-description:
+description: Sites about my life, techs and what I believe.
 author: tom76kimo
 language:
 timezone:
