--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-    "name": "hexo-site",
-    "version": "0.0.0",
-    "private": true,
-    "hexo": {
-        "version": "3.9.0"
-    },
-    "scripts": {
-        "build": "hexo generate",
-        "deploy": "hexo deploy",
-        "dev": "hexo server",
-        "init": "git submodule update --init --recursive",
-        "publish": "hexo deploy -g"
-    },
-    "dependencies": {
-        "hexo": "^3.9.0",
-        "hexo-deployer-git": "^1.0.0",
-        "hexo-generator-archive": "^0.1.5",
-        "hexo-generator-category": "^0.1.3",
-        "hexo-generator-feed": "^1.2.2",
-        "hexo-generator-index": "^0.2.0",
-        "hexo-generator-sitemap": "^1.2.0",
-        "hexo-generator-tag": "^0.2.0",
-        "hexo-renderer-ejs": "^0.2.0",
-        "hexo-renderer-jade": "^0.4.1",
-        "hexo-renderer-marked": "^1.0.1",
-        "hexo-renderer-stylus": "^0.3.1",
-        "hexo-server": "^0.2.2"
-    }
+  "name": "hexo-site",
+  "version": "0.0.1",
+  "private": true,
+  "hexo": {
+    "version": "5.4.0"
+  },
+  "scripts": {
+    "build": "hexo generate",
+    "deploy": "hexo deploy",
+    "dev": "hexo server",
+    "init": "git submodule update --init --recursive",
+    "publish": "hexo deploy -g"
+  },
+  "dependencies": {
+    "hexo": "5",
+    "hexo-deployer-git": "^3.0.0",
+    "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-category": "^1.0.0",
+    "hexo-generator-feed": "^1.2.2",
+    "hexo-generator-index": "^0.2.0",
+    "hexo-generator-sitemap": "^2.1.0",
+    "hexo-generator-tag": "^0.2.0",
+    "hexo-renderer-ejs": "^0.2.0",
+    "hexo-renderer-marked": "^4.0.0",
+    "hexo-renderer-pug": "^1.0.0",
+    "hexo-renderer-stylus": "^2.0.0",
+    "hexo-server": "^2.0.0"
+  }
 }
